--- a/example-client/pom.xml
+++ b/example-client/pom.xml
@@ -29,6 +29,13 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.gxhunter</groupId>
             <artifactId>hello-service-api</artifactId>
