--- a/example-server/pom.xml
+++ b/example-server/pom.xml
@@ -16,6 +16,13 @@
             <artifactId>hello-service-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.gxhunter</groupId>
             <artifactId>rpc-framework-core</artifactId>
