--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,29 @@
     <artifactId>rpc-framework</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <developers>
+        <developer>
+            <id>hunter</id>
+            <name>树荫下的天空</name>
+            <url>git@github.com:GXhunter/rpc-framework.git</url>
+            <roles>
+                <role>master</role>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
     <properties>
         <encoding>UTF-8</encoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <netty.version>4.1.86.Final</netty.version>
         <kryo.version>4.0.2</kryo.version>
-        <guava.version>30.1.1-jre</guava.version>
-        <checkstyle-maven-plugin.version>3.1.1</checkstyle-maven-plugin.version>
         <springboot.version>2.7.15</springboot.version>
         <curator-version>5.5.0</curator-version>
+        <slf4j.version>1.7.25</slf4j.version>
         <!-- test -->
         <junit.jupiter.version>5.5.2</junit.jupiter.version>
         <junit.platform.version>1.10.0</junit.platform.version>
-        <!--logging-->
-        <slf4j.version>1.7.25</slf4j.version>
-        <!-- protostuff -->
-        <protostuff.version>1.7.2</protostuff.version>
-        <!--hessian-->
-        <hessian.version>4.0.65</hessian.version>
     </properties>
     <modules>
         <module>example-client</module>
